# web-starter

./: .clang-format  CMakeLists.txt  CMakePresets.json  Dockerfile  Readme.md  mise.toml
assets/: index.html
src/: main.cc  main.cpp
utilities/: install.sh
web/: components.json  index.html  package.json  vite.config.ts
web/src/: app.tsx  index.css  model.ts
web/src/components/: basic.tsx  cities.json  citypanel.tsx  content.tsx  header.tsx
web/src/components/ui/: button.tsx  combobox.tsx  field.tsx  item.tsx  menubar.tsx
web/src/lib/: api.ts  model.ts  utils.ts  validator.ts
web/src/ui/: button.tsx
